added responsable in users

--- a/gitignore/todo
+++ b/gitignore/todo
@@ -1,3 +1,4 @@
 catch les erreurs de credential
 assigner un responsable a chaque developpeur
 restrindre l'accès aux pages 
+ajouter la possibilité de mettre des checkboxes pour les suppléments
